Closed
Bug 1647537
Opened 6 years ago
Closed 5 years ago
In about:webrtc, clicking "Start AEC Logging" button 3 times crashes
Categories
(Core :: WebRTC, defect, P2)
Core
WebRTC
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox82 | --- | fixed |
People
(Reporter: jib, Assigned: ng)
Details
Attachments
(1 file)
STRs:
- Go to about:webrtc
- Click
Start AEC Loggingbutton - Click
Stop AEC Loggingbutton - Click
Start AEC Loggingbutton
Expected result: No crash
Actual result: bp-b2546469-97d8-4421-894d-d9d9a0200623
Regression range: MozRegression says this crashes as far back as 2019-06-25 or more.
However, when I try it on 77.0.1 release it does not crash, so it is confusing.
Flags: needinfo?(na-g)
Comment 1•6 years ago
|
||
Verified this isn't related to having socket process enabled.
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → na-g
Status: NEW → ASSIGNED
Pushed by na-g@nostrum.com:
https://hg.mozilla.org/integration/autoland/rev/43e8a6fa2035
fix crash when re-enabling AEC logging;r=jib
Comment 4•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Updated•2 years ago
|
Flags: needinfo?(na-g)
You need to log in
before you can comment on or make changes to this bug.
Description
•