Bug 1647537 - fix crash when re-enabling AEC logging;r=jib

Differential Revision: https://phabricator.services.mozilla.com/D88236